envoy-opa-graphql-demo/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                stream_idle_timeout: 300s  # SSE 长连接保活
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: graphql_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: graphql_service
                            timeout: 0s  # 禁用 route 超时（SSE 无终止时间）
                http_filters:
                  # 1. ext_authz: 将请求发送给 authz-server 进行鉴权
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      grpc_service:
                        envoy_grpc:
                          cluster_name: authz_service
                        timeout: 5s
                      with_request_body:
                        max_request_bytes: 65536
                        allow_partial_message: true

                  # 2. Lua filter: 读取 x-rewritten-body header 并替换请求 body
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      default_source_code:
                        inline_string: |
                          function envoy_on_request(request_handle)
                            local rewritten = request_handle:headers():get("x-rewritten-body")
                            if rewritten ~= nil and rewritten ~= "" then
                              request_handle:headers():remove("x-rewritten-body")
                              request_handle:headers():replace("content-length", tostring(#rewritten))
                              request_handle:body():setBytes(rewritten)
                            end
                          end

                  # 3. Router
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: authz_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: authz_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: authz-server
                      port_value: 9001

    - name: graphql_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: graphql_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: graphql-server
                      port_value: 8080

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
